--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "gulp-boilerplate",
+  "name": "dia",
   "version": "1.0.0",
-  "description": "Frontend boilerplate based on gulp",
+  "description": "Dia landing page",
   "scripts": {
     "init": "mate-scripts init",
     "start": "mate-scripts start",
-    "lint": "mate-scripts lint",
+    "style-format": "npx stylelint 'src/**/*.scss' --fix --allow-empty-input",
+    "format": "prettier --ignore-path .prettierignore --write './src/**/*.{html,css,scss}'",
+    "lint": "npm run style-format && npm run format && mate-scripts lint",
     "test:only": "mate-scripts test",
     "build": "mate-scripts build",
     "deploy": "mate-scripts deploy",
@@ -18,28 +20,24 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "@linthtml/linthtml": "^0.9.5",
-    "@mate-academy/backstop-config": "^1.0.0",
-    "@mate-academy/bemlint": "^0.1.1",
-    "@mate-academy/eslint-config": "*",
-    "@mate-academy/linthtml-config": "*",
-    "@mate-academy/scripts": "^1.7.0",
-    "@mate-academy/stylelint-config": "^0.0.11",
-    "@parcel/transformer-sass": "2.10.2",
-    "backstopjs": "^6.2.2",
-    "eslint": "^8.52.0",
-    "eslint-plugin-node": "^11.1.0",
+    "@mate-academy/bemlint": "latest",
+    "@mate-academy/linthtml-config": "latest",
+    "@mate-academy/scripts": "^1.9.3",
+    "@mate-academy/stylelint-config": "latest",
+    "@parcel/transformer-sass": "^2.12.0",
     "jest": "^29.7.0",
-    "parcel": "2.10.2",
+    "parcel": "^2.12.0",
+    "prettier": "^3.2.5",
     "stylelint": "^15.11.0"
   },
-  "browserslist": [
-    "last 2 versions"
-  ],
   "mateAcademy": {
     "projectType": "layout",
     "linters": {
+      "javascript": false,
       "bem": false
+    },
+    "tests": {
+      "backstop": false
     }
-  },
-  "dependencies": {}
+  }
 }
